log
vi., 13 de may. de 2022 16:45:06: 
 sudoku.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:67:27: error: passing argument 2 of 'pushBack' makes pointer from integer without a cast [-Werror=int-conversion]
             pushBack(list,numeroColocar);
                           ^~~~~~~~~~~~~
In file included from test.c:4:0:
list.h:23:6: note: expected 'void *' but argument is of type 'int'
 void pushBack(List* list, void* data);
      ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
dc31009
